style: changed ui fixed related to dark mode.

--- a/src/index.css
+++ b/src/index.css
@@ -4,8 +4,10 @@
 @theme {
   --background: #f5f5f5;
   --foreground: #171717;
-  --color-primary-bg-color: white;
+  --color-primary-bg-color: #f5f5f5;
+  --color-secondary-bg-color: white;
   --color-primary-text-color: #171717;
+  --color-primary-button-bg-color: black;
   --color-primary-border-color: #e4e4e7;
 }
 
@@ -13,15 +15,17 @@
   .dark {
     --background: #2c2c2c;
     --foreground: #ededed;
-    --color-primary-bg-color: #383838;
+    --color-primary-bg-color: #2c2c2c;
+    --color-secondary-bg-color: #383838;
     --color-primary-text-color: white;
-    --color-primary-border-color: #e4e4e7;
+    --color-primary-button-bg-color: #1E1E1E;
+    --color-primary-border-color: #444444;
   }
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
+  background: var(--color-primary-bg-color);
+  color: var(--color-primary-text-color);
   font-family: Arial, Helvetica, sans-serif;
   transition: background-color 0.3s, color 0.3s;
 }
